# nmpde-labs-aa-25-26

./: README.md
10858201/: CMakeLists.txt
10858201/src/: DN2D.cpp  DN2D.hpp  UStokes.cpp  UStokes.hpp  exercise-01.cpp  exercise-02.cpp
20250210/: CMakeLists.txt
20250210/src/: ADR1D.cpp  ADR1D.hpp  UStokes.cpp  UStokes.hpp  exercise-01.cpp  exercise-02.cpp
20250604/: CMakeLists.txt
20250604/src/: ADR1D.cpp  ADR2D.cpp  ADR2D.hpp  Stokes.cpp  exercise-01.cpp  exercise-03.cpp
20250604_stokesf_advdiff1d/: CMakeLists.txt
20250604_stokesf_advdiff1d/src/: ADR1D.cpp  ADR1D.hpp  ARD1D.cpp  ARD1D.hpp  Stokes.hpp  exercise-01.cpp  exercise-02.cpp
Parabolic/generic_parabolic/: CMakeLists.txt
Parabolic/generic_parabolic/src/: Parabolic.cpp  Parabolic.hpp  exercise-01.cpp
UStokes/: CMakeLists.txt
UStokes/08.07.2025/: CMakeLists.txt
UStokes/08.07.2025/src/: UStokes.cpp  UStokes.hpp  exercise-01.cpp
UStokes/src/: UStokes.cpp  UStokes.hpp  exercise-01.cpp
lab-00/text/: Paraview.txt
lab-01/src/: Poisson1D.hpp  exercise-01.cpp  exercise-02.cpp
lab-07/: CMakeLists.txt
lab-07/src/: Stokes.cpp  Stokes.hpp
lab-08/src/: Poisson2D.cpp  exercise-01.cpp
